Finished the infix to postfix expressiong and evaluating

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="script.js" defer></script>
 
     <!-- font-import -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,7 +25,7 @@
         <div id="screen-text"></div>
     </div>
 
-    <div class="numpad">
+    <div id="numpad">
         <div class="numpad-item numpad-ac ac" data-key="ac">AC</div>
         <div class="numpad-item numpad-del del" data-key="del">Del</div>
         <div class="numpad-item numpad-op dot" data-key=".">.</div>
